--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,4 +6,7 @@ node{
         def mvnHome = tool name: 'maven-3.6.1', type: 'maven'
         sh "${mvnHome}/bin/mvn package"
     }
+    stage('Docker deploy'){
+        sh 'docker build .' 
+    }
 }
